# smile

./: .gitignore  pyproject.toml
smile/: README.md
smile/active_learning/src/: active_learning.py  calc_noise.py  calc_ranks.py  calc_stats.py  calc_wilcoxon.py  calc_winrate.py  client.py  data.py  experiment.py  progress.py  server.py  set_svm.py
smile/bagging/src/: calc_stats.py  client.py  data.py  experiment.py  inout.py  make_folds.py  server.py
smile/classification/analysis/: stats.csv  stats_perturbed_1.csv  stats_perturbed_2.csv
smile/classification/config/: config.yaml  small_config.yaml
smile/classification/data/: perturbed_musk_1.data  perturbed_musk_1.names
smile/classification/folds/: perturbed_musk_1_0000.fold  perturbed_musk_1_0001.fold  perturbed_musk_1_0002.fold  perturbed_musk_1_0003.fold  perturbed_musk_1_0004.fold  perturbed_musk_1_0005.fold  perturbed_musk_1_0006.fold  perturbed_musk_1_0007.fold  perturbed_musk_1_0008.fold  perturbed_musk_1_0009.fold
smile/classification/src/: calc_stats.py  client.py  experiment.py  hypertuning.py  make_folds.py  progress.py  server.py
