[tool.poetry]
name = "smile"
version = "0.1.0"
description = ""
authors = ["Sherry Chen <schen1618@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21.4"
scipy = "^1.7.3"
PyYAML = "^6.0"
CherryPy = "^18.6.1"
scikit-learn = "^1.0.1"
ray = { version = "^1.9.2", extras = ["tune", "default"] }
misvm = { git = "https://github.com/schen1618/misvm.git", rev = "0.1.1" }

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
